# data_wrangling_sample

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
data_wrangling/: utils.py  validate.py  wrangle.py
data_wrangling/docker_sample/: docker_test.py
