[tool.poetry]
name = "data-wrangling-sample"
version = "0.1.0"
description = "A simple data wrangling pipeline"
authors = ["theycallmejeano <jeangithae@outlook.com>"]
readme = "README.md"
#packages = [{include = "data_wrangling"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.2"
loguru = "^0.7.0"
geopy = "^2.3.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
